--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,8 @@
   "compilerOptions": {
     "strictNullChecks": true,
     "noImplicitAny": true,
-    "module": "ES2020",
-    "target": "ES2020", 
+    "module": "ESNext",
+    "target": "ESNext", 
     "moduleResolution": "node",
     "lib": ["ESNext"],
     "types": [
